2009-08-29  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylib.el (ti::package-install-pgp-tar): Add TEMPDIR.
	(ti::package-install-pgp-tar): Correct gpg, pgp check.

	* tiny/tinypage.el: (Commentary): Improve many paragraphs.

	* tiny/tinypath.el (tinypath-info-handler): Correct indentation.
	(tinypath-info-kill-buffers): Improve error checking.

	* tiny/tinydebian.el (tinydebian-bts-mail-title-read): New.
	(tinydebian-bts-mail-ctrl-retitle): Use
	`tinydebian-bts-mail-title-read' to offer old Subject
	for editing.

2009-08-28  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-command-severity):
	Correct interactive spec: Call
	'tinydebian-mail-mode-debian-address-ask-bug'.

2009-08-25  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylib.el (ti::set-face-try-list): Improve docstring.

2009-08-21  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mode):
	Correct 'r' to call `tinydebian-bts-mail-type-reply'.

2009-08-20  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-:menu-info): Correct docstring.
	The hook menu is (o), not (h).

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-forwarded-main):
	Fix if-case indent.

2009-08-14  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-notfound):
	Add missing parameter VERSION.
	(tinydebian-bts-mail-ctrl-notfixed): New.
	(tinydebian-bts-mail-ctrl-command-notforwarded): New.
	(tinydebian-bts-mail-ctrl-command-notfixed): New.
	(tinydebian-bts-mail-ctrl-command-notfound): New.
	(tinydebian-bts-mail-ctrl-notforwarded): New.
	(tinydebian-bug-nbr-debian-url-forward): New.
	(tinydebian-mail-mode-debian-address-package-toggle): New.
	(tinydebian-mail-mode-address-type-add): Rename function.
	(tinydebian-bug-gnu-emacs-bts-gnus-summary-line-p): Improve
	Emacs BTS detection.

2009-08-13  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-notfound): New.
